--- a/index.html
+++ b/index.html
@@ -4,19 +4,29 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=h1, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/style.css" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
-
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anonymous+Pro&family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Weather App</title>
   </head>
   <body>
     <div class="container">
-      <div class="weather">
+      <div class="weather-app">
         <form action="">
           <div class="row">
             <div class="col-9">
@@ -26,19 +36,17 @@
                 class="form-control search-input"
               />
             </div>
-            <div class="col-3 p-0">
-              <input
-                type="submit"
-                class="btn btn-primary w-100"
-                value="Search"
-              />
+            <div class="col-1">
+              <input type="submit" class="btn btn-info" value="go" />
+            </div>
+            <div class="col-2">
+              <input type="submit" class="btn btn-info" value="go" />
             </div>
           </div>
         </form>
         <div class="weather-info">
           <div class="row">
             <div class="col-6">
-              <span></span>
               <ul>
                 <li id="time">Sunday, 19:00</li>
                 <li>
@@ -51,19 +59,24 @@
               </ul>
             </div>
             <div class="col-6">
-              <div class="weather-icon">🌤</div>
+              <div class="weather-image">
+                <img
+                  src="https://cdn4.iconfinder.com/data/icons/weatherful/72/Cloudy_Sunny-128.png"
+                  alt=""
+                />
+              </div>
             </div>
           </div>
         </div>
+        <small>
+          <a
+            href="https://github.com/laurakomp/weather-app-project"
+            target="_blank"
+            >open-source code</a
+          >
+          by Laura Komp
+        </small>
       </div>
-      <small>
-        <a
-          href="https://github.com/laurakomp/weather-app-project"
-          target="_blank"
-          >open-source code</a
-        >
-        by Laura Komp
-      </small>
     </div>
     <script src="src/app.js"></script>
   </body>
