Styled temp section, added html

--- a/index.html
+++ b/index.html
@@ -26,44 +26,49 @@
   </head>
   <body>
     <div class="container">
-      <div class="weather-app">
-        <form action="">
-          <div class="row">
-            <div class="col-9">
-              <input
-                type="search"
-                placeholder="Enter a city..."
-                class="form-control search-input"
-              />
-            </div>
-            <div class="col-1">
-              <input type="submit" class="btn btn-info" value="go" />
-            </div>
-            <div class="col-2">
-              <input type="submit" class="btn btn-info" value="go" />
-            </div>
-          </div>
-        </form>
-        <div class="weather-info">
-          <div class="row">
-            <div class="col-6">
-              <ul>
-                <li id="time">Sunday, 19:00</li>
-                <li>
-                  <h1 id="city">Tallinn</h1>
-                </li>
-                <li id="temp">12C</li>
-                <li id="weather-description">clear sky</li>
-                <li id="wind">3km/h</li>
-                <li id="humidity">79%</li>
-              </ul>
-            </div>
-            <div class="col-6">
-              <div class="weather-image">
-                <img
-                  src="https://cdn4.iconfinder.com/data/icons/weatherful/72/Cloudy_Sunny-128.png"
-                  alt=""
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <form action="">
+            <div class="row">
+              <div class="col-9">
+                <input
+                  type="search"
+                  placeholder="Enter a city..."
+                  class="form-control search-input"
                 />
+              </div>
+              <div class="col-1">
+                <input type="submit" class="btn btn-info" value="go" />
+              </div>
+              <div class="col-2">
+                <input type="submit" class="btn btn-info" value="go" />
+              </div>
+            </div>
+          </form>
+          <div class="weather-info">
+            <div class="row">
+              <div class="col-6">
+                <ul>
+                  <li id="time">Sunday, 19:00</li>
+                  <li>
+                    <h1 id="city">Tallinn</h1>
+                  </li>
+                  <li id="temp">
+                    <strong>12</strong
+                    ><span class="units">°C | <a href=""> °F</a></span>
+                  </li>
+                  <li id="weather-description">clear sky</li>
+                  <li id="wind">3km/h</li>
+                  <li id="humidity">79%</li>
+                </ul>
+              </div>
+              <div class="col-6">
+                <div class="weather-image">
+                  <img
+                    src="https://cdn4.iconfinder.com/data/icons/weatherful/72/Cloudy_Sunny-128.png"
+                    alt="cloudy"
+                  />
+                </div>
               </div>
             </div>
           </div>
