--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap"
       rel="stylesheet"
     />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>Weather App</title>
   </head>
@@ -28,7 +29,7 @@
     <div class="container">
       <div class="weather-app-wrapper">
         <div class="weather-app">
-          <form action="">
+          <form action="#">
             <div class="row">
               <div class="col-9">
                 <input
@@ -51,11 +52,11 @@
                 <ul>
                   <li id="time">Sunday, 19:00</li>
                   <li>
-                    <h1 id="city">Tallinn</h1>
+                    <h1 id="city"></h1>
                   </li>
                   <li id="temp">
-                    <strong>12</strong
-                    ><span class="units">°C | <a href=""> °F</a></span>
+                    <strong id="temperature"></strong
+                    ><span class="units">°C | <a href="#"> °F</a></span>
                   </li>
                   <li id="weather-description">clear sky</li>
                   <li id="wind">3km/h</li>
