Showing current temp, wind, humidity

--- a/index.html
+++ b/index.html
@@ -54,13 +54,17 @@
                   <li>
                     <h1 id="city"></h1>
                   </li>
-                  <li id="temp">
-                    <strong id="temperature"></strong
-                    ><span class="units">°C | <a href="#"> °F</a></span>
+                  <li>
+                    <div class="clearfix weather-temperature">
+                      <div class="float-left">
+                        <strong id="temperature"></strong
+                        ><span class="units">°C | <a href="#"> °F</a></span>
+                      </div>
+                    </div>
                   </li>
-                  <li id="weather-description">clear sky</li>
-                  <li id="wind">3km/h</li>
-                  <li id="humidity">79%</li>
+                  <li><span id="weather-description"> </span></li>
+                  <li>Wind: <span id="wind"> </span> km/h</li>
+                  <li>Humidity: <span id="humidity"></span>%</li>
                 </ul>
               </div>
               <div class="col-6">
