--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="row">
               <div class="col-6">
                 <ul>
-                  <li id="time">Sunday, 19:00</li>
+                  <li>Last updated: <span id="date"></span></li>
                   <li>
                     <h1 id="city"></h1>
                   </li>
