Added relevant icon from API

--- a/index.html
+++ b/index.html
@@ -69,10 +69,7 @@
               </div>
               <div class="col-6">
                 <div class="weather-image">
-                  <img
-                    src="https://cdn4.iconfinder.com/data/icons/weatherful/72/Cloudy_Sunny-128.png"
-                    alt="cloudy"
-                  />
+                  <img src="" alt="" id="icon" />
                 </div>
               </div>
             </div>
