Added Fahrenheit conversion

--- a/index.html
+++ b/index.html
@@ -71,21 +71,16 @@
                 </ul>
               </div>
               <div class="col-4">
-                <ul>
-                  <li>
-                    <div class="clearfix weather-temperature">
-                      <div class="float-left">
-                        <strong id="temperature"></strong
-                        ><span class="units">°C | <a href="#"> °F</a></span>
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="description">
-                      <span id="weather-description"> </span>
-                    </div>
-                  </li>
-                </ul>
+                <div class="weather-temperature">
+                  <strong id="temperature"></strong
+                  ><span class="units"
+                    ><a href="#" id="celsius-link" class="active">°C</a> |
+                    <a href="#" id="fahrenheit-link">°F</a></span
+                  >
+                </div>
+                <div class="description">
+                  <span id="weather-description"> </span>
+                </div>
               </div>
             </div>
           </div>
