Removed one button

--- a/index.html
+++ b/index.html
@@ -40,11 +40,8 @@
                   autocomplete="off"
                 />
               </div>
-              <div class="col-1">
-                <input type="submit" class="btn btn-go" value="go" />
-              </div>
-              <div class="col-1">
-                <input type="submit" class="btn btn-current" value="go" />
+              <div class="col-2">
+                <input type="submit" class="btn btn-go" value="Search" />
               </div>
             </div>
           </form>
