--- a/index.html
+++ b/index.html
@@ -121,19 +121,8 @@
                 </div>
               </div>
             </div>
-            <div class="weather-forecast">
-              <div class="row">
-                <div class="col-2">
-                  <div class="weather-forecast-date">
-                  FRI </div>
-                  <img src="file:///Users/laurakomp/Desktop/weather-app-final/icons/02d.png" alt="" width="40px">
-                  <div class="weather-forecast-temperature"> 
-                    <span class="weather-forecast-temperature-max">18°</span>
-                    <span class="weather-forecast-temperature-min">12°</span>
-                  </div>
-                 
-                </div>
-              </div>
+            <div class="weather-forecast" id="forecast">
+             
 
             </div>
           </div>
