Removed Fahrenheit conversion

--- a/index.html
+++ b/index.html
@@ -72,9 +72,7 @@
               <li>
                 <div class="weather-temperature">
                   <strong id="temperature"></strong>
-                  <span class="units">
-                    <a href="#" id="celsius-link" class="active">°C</a> |
-                    <a href="#" id="fahrenheit-link">°F</a>
+                  <span class="units">°C 
                   </span>
 
                 </div>
@@ -92,7 +90,7 @@
                       </li>
                       <li>
                         <span id="wind"></span>
-                        <span class="wind-units">km/h</span>
+                        <span class="wind-units">m/s</span>
                       </li>
                     </ul>
                   </div>
