Small css improvements, updated fonts and icons

--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
       href="https://fonts.googleapis.com/css2?family=Anonymous+Pro&family=Poppins&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  
     <link
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       rel="stylesheet"
@@ -79,7 +77,7 @@
 
               </li>
             </ul>
-            <hr class="new1">
+            <hr class="line">
             <div class="description">
               <div class="row">
                 <div class="col-4">
@@ -96,12 +94,10 @@
                   </div>
                 </div>
                 <div class="col-4">
-                  <!-- same class as the whole section - test it out -->
-                  <div class="description">
+                  <div class="current-description">
                     <ul>
                       <li>
                         <span id="weather-description">
-
                         </span>
                       </li>
                     </ul>
